refactor: Maintain jiter-pupy package name while enabling jiter import
- Kept PyPI package name as `jiter-pupy`
- Preserved GitHub repository URL as `https://github.com/twardoch/jiter-pupy`
- Created a redirection mechanism to allow `import jiter`
- Updated version to 0.8.3
- Added `jiter_pupy` package to wheel build
- Ensured backward compatibility for imports

This change allows users to install the package as `jiter-pupy` while importing it as `jiter`, providing a smooth transition and maintaining existing package infrastructure.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,8 +63,8 @@ requires = [
 
 
 [tool.coverage.paths]
-jiter = ["src/jiter", "*/jiter/src/jiter"]
-tests = ["tests", "*/jiter/tests"]
+jiter = ["src/jiter", "*/jiter-pupy/src/jiter"]
+tests = ["tests", "*/jiter-pupy/tests"]
 
 
 
@@ -85,12 +85,11 @@ omit = [
 
 
 
-[tool.hatch.build.hooks.vcs]
-version-file = "src/jiter/__version__.py"
-
-
 [tool.hatch.build.targets.wheel]
 packages = ["src/jiter"]
+
+[tool.hatch.build.targets.wheel.sources]
+"src/jiter" = "jiter"
 
 
 
